components/layout/header/header.module.scss
.headerContainer {
    width: calc(100% - 112px);
    margin: auto;
    padding: 16px 56px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    height: 36px;
    left: 0%;
    top: 0px;
    background: #FFFFFF;
    box-shadow: 0px 3px 50px -1px rgba(50, 50, 71, 0.05);
}

.headerTitle {
    font-weight: 800;
    font-size: 24px;
    display: flex;
    align-items: center;
    text-align: right;
    color: #222222;
}

.avatar {
    margin: 0px 40px 0px 12px;
    display: flex;
    align-items: center;
}

.userName {
    font-weight: 700;
    font-size: 14px;
    display: flex;
    align-items: center;
    text-align: right;
    color: #454545;
    margin-left: 20px;
}

.headerDetailWrapper {
    display: flex;
    align-items: center;
}

.newQuestionButton {
    width: 126px !important;
    height: 36px !important;

    .newQuestionButtonText {
        margin-right: 13px;
    }
}

